--- a/index.html
+++ b/index.html
@@ -6,26 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nex One Nhambiquaras</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
 </head>
+<script type="text/javascript">(function(n,r,l,d){try{var h=r.head||r.getElementsByTagName("head")[0],s=r.createElement("script");s.setAttribute("type","text/javascript");s.setAttribute("src",l);n.neuroleadId=d;h.appendChild(s);}catch(e){}})(window,document,"https://cdn.leadster.com.br/neurolead/neurolead.min.js", 51467);</script> 
 <body>
     <header>
+        <img src="" alt="">
         <h1>Nex One Nhambiquaras</h1>
         <nav class="navegacao">
             <ul>
-                <li>Home</li>
-                <li>Ficha Técnica</li>
-                <li>Plantas</li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#ficha">Ficha Técnica</a></li>
+                <li><a href="#planta">Plantas</a></li>
                 <li>Imagens</li>
                 <li>Valores</li>
                 <li>Localização</li>
             </ul>
         </nav>
+        <div class="img_inicial">
+            <picture>
+            <img src="" alt="">
+            </picture>
+        </div>
     </header>
     <main>
-
+        <h2 class="subtitulos" id="ficha">Ficha técnica Nex One Nhambiquaras</h2>
+        <ul>
+            <li>27 m2   -   studios NR   (sem vaga)</li>
+            <li>27 à 33 m2   -   1 dorm.   (sem vaga)</li>
+            <li>40 à 43 m2   -   2 dorms.  (sem vaga)</li>
+            <li>Torre Única   -   15 andares</li>        
+            <li>Terreno 1.579 m2</li>
+            <li>Total 286 unidades</li>
+            <li>Infraestrutura para Ar condicionado</li>
+            <li>Previsão Entrega : NOVEMBRO / 2024</li>
+        </ul>
+        <p><strong>Lazer</strong> :
+            Espaço Fitness / Salão de Festas / Salão de Jogos / Coworking / Pet Place / Churrasqueira / Playground / Lavanderia / Piscina / Delivery / Bicicletário ....
+        </p>
+            <picture>
+                <img src="" alt="">
+            </picture>
+        <h2 class="subtitulos" id="plantas">Plantas</h2>
+            <picture>
+                <img src="" alt="">
+            </picture>
+        <h2 class="subtitulos" id="imagens">Imagens</h2>
+        <p>Áreas de Lazer entregue equipadas</p>
+        <picture>
+            <img src="" alt="">
+        </picture>
+        <picture>
+        </picture>
+        <h2 class="subtitulos" id="localização">Localização</h2>
+        <ul>
+            <li>450m Shopping Ibirapuera</li>
+            <li>600m Estação Eucaliptos</li>    
+            <li>2 km Parque das Bicicletas</li>           
+            <li>2,9 km Parque do Ibirapuera</li>
+        </ul>
     </main>
     <footer>
-
+        <p>© 2022 All rights reserved. <a href="https://github.com/ViniciusAlbanit">Vinicius Farias Albanit</a></p>
     </footer>
 </body>
 </html>
