--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
 <script type="text/javascript">(function(n,r,l,d){try{var h=r.head||r.getElementsByTagName("head")[0],s=r.createElement("script");s.setAttribute("type","text/javascript");s.setAttribute("src",l);n.neuroleadId=d;h.appendChild(s);}catch(e){}})(window,document,"https://cdn.leadster.com.br/neurolead/neurolead.min.js", 51467);</script> 
 <body>
     <header>
-        <img src="" alt="">
+        <img src="imagens/logo_1_1x.jpg" alt="">
         <h1>Nex One Nhambiquaras</h1>
         <nav class="navegacao">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#ficha">Ficha Técnica</a></li>
-                <li><a href="#planta">Plantas</a></li>
-                <li>Imagens</li>
-                <li>Valores</li>
-                <li>Localização</li>
-            </ul>
+            <a href="index.html">Home</a>
+            <a href="#ficha">Ficha Técnica</a>
+            <a href="#planta">Plantas</a>
+            <a href="#imagens">Imagens</a>
+            <a href="#">Valores</a>
+            <a href="#localizacao">Localização</a>
         </nav>
         <div class="img_inicial">
             <picture>
@@ -30,23 +28,25 @@
         </div>
     </header>
     <main>
+    <div id="ficha_tecnica">
+        <picture>
+            <img class="predio" src="imagens/fachada_1x.jpg" alt="predio">
+        </picture>
         <h2 class="subtitulos" id="ficha">Ficha técnica Nex One Nhambiquaras</h2>
         <ul>
-            <li>27 m2   -   studios NR   (sem vaga)</li>
-            <li>27 à 33 m2   -   1 dorm.   (sem vaga)</li>
-            <li>40 à 43 m2   -   2 dorms.  (sem vaga)</li>
+            <li><strong>27 m2</strong>   -   studios NR   (sem vaga)</li>
+            <li><strong>27 à 33 m2</strong>   -   1 dorm.   (sem vaga)</li>
+            <li><strong>40 à 43 m2</strong>   -   2 dorms.  (sem vaga)</li>
             <li>Torre Única   -   15 andares</li>        
             <li>Terreno 1.579 m2</li>
             <li>Total 286 unidades</li>
             <li>Infraestrutura para Ar condicionado</li>
-            <li>Previsão Entrega : NOVEMBRO / 2024</li>
+            <li><strong>Previsão Entrega</strong> : NOVEMBRO / 2024</li>
         </ul>
         <p><strong>Lazer</strong> :
             Espaço Fitness / Salão de Festas / Salão de Jogos / Coworking / Pet Place / Churrasqueira / Playground / Lavanderia / Piscina / Delivery / Bicicletário ....
         </p>
-            <picture>
-                <img src="" alt="">
-            </picture>
+    </div>
         <h2 class="subtitulos" id="plantas">Plantas</h2>
             <picture>
                 <img src="" alt="">
@@ -58,7 +58,7 @@
         </picture>
         <picture>
         </picture>
-        <h2 class="subtitulos" id="localização">Localização</h2>
+        <h2 class="subtitulos" id="localizacao">Localização</h2>
         <ul>
             <li>450m Shopping Ibirapuera</li>
             <li>600m Estação Eucaliptos</li>    
