--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <picture>
             <img class="predio" src="imagens/fachada_1x.jpg" alt="predio">
         </picture>
-        <h2 class="subtitulos" id="ficha">Ficha técnica Nex One Nhambiquaras</h2>
+        <h2 class="subtitulos" id="ficha">Ficha técnica Nex One Nhambiquaras - Lançamento</h2>
         <ul>
             <li><strong>27 m2</strong>   -   studios NR   (sem vaga)</li>
             <li><strong>27 à 33 m2</strong>   -   1 dorm.   (sem vaga)</li>
@@ -65,6 +65,7 @@
             <li>2 km Parque das Bicicletas</li>           
             <li>2,9 km Parque do Ibirapuera</li>
         </ul>
+        <span id="mouse"></span>
     </main>
     <footer>
         <p>© 2022 All rights reserved. <a href="https://github.com/ViniciusAlbanit">Vinicius Farias Albanit</a></p>
