--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
         </div>
     </header>
     <main>
-    <div id="ficha_tecnica">
-        <picture>
-            <img class="predio" src="imagens/fachada_1x.jpg" alt="predio">
-        </picture>
+    <div class="ficha_tecnica">
         <h2 class="subtitulos" id="ficha">Ficha técnica Nex One Nhambiquaras - Lançamento</h2>
         <ul>
             <li><strong>27 m2</strong>   -   studios NR   (sem vaga)</li>
