--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="navegacao">
             <a href="index.html">Home</a>
             <a href="#ficha">Ficha Técnica</a>
-            <a href="#planta">Plantas</a>
+            <a href="#plantas">Plantas</a>
             <a href="#imagens">Imagens</a>
             <a href="#">Valores</a>
             <a href="#localizacao">Localização</a>
