--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
             Espaço Fitness / Salão de Festas / Salão de Jogos / Coworking / Pet Place / Churrasqueira / Playground / Lavanderia / Piscina / Delivery / Bicicletário ....
         </p>
     </div>
+    <div class="plantas_apt">
         <h2 class="subtitulos" id="plantas">Plantas</h2>
             <picture>
-                <img src="" alt="">
+                <img class="planta" src="imagens/planta01.jpeg.jpeg" alt="">
             </picture>
+    </div>
         <h2 class="subtitulos" id="imagens">Imagens</h2>
         <p>Áreas de Lazer entregue equipadas</p>
         <picture>
