--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <nav class="navegacao">
             <a href="index.html">Home</a>
             <a href="#ficha">Ficha Técnica</a>
-            <a href="#plantas">Plantas</a>
             <a href="#imagens">Imagens</a>
+            <a href="#plantas">Plantas</a>
             <a href="#">Valores</a>
             <a href="#localizacao">Localização</a>
         </nav>
@@ -44,19 +44,25 @@
             Espaço Fitness / Salão de Festas / Salão de Jogos / Coworking / Pet Place / Churrasqueira / Playground / Lavanderia / Piscina / Delivery / Bicicletário ....
         </p>
     </div>
-    <div class="plantas_apt">
-        <h2 class="subtitulos" id="plantas">Plantas</h2>
-            <picture>
-                <img class="planta" src="imagens/planta01.jpeg.jpeg" alt="">
-            </picture>
-    </div>
-        <h2 class="subtitulos" id="imagens">Imagens</h2>
+    <h2 class="subtitulos" id="imagens">Imagens</h2>
         <p>Áreas de Lazer entregue equipadas</p>
         <picture>
             <img src="" alt="">
         </picture>
         <picture>
         </picture>
+    <div class="plantas_apt">
+        <h2 class="subtitulos" id="plantas">Plantas</h2>
+            <div class="coluna">
+                <img class="img_planta" src="imagens/planta01.jpeg.jpeg" alt="">
+            </div>
+            <div class="coluna">
+                <img class="img_planta" src="imagens/planta02.jpeg.jpeg" alt="">
+            </div>
+            <div class="coluna">
+                <img class="img_planta" src="imagens/planta03.jprg.jpeg" alt="">
+            </div>
+    </div>
         <h2 class="subtitulos" id="localizacao">Localização</h2>
         <ul>
             <li>450m Shopping Ibirapuera</li>
