--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
-<script type="text/javascript">(function(n,r,l,d){try{var h=r.head||r.getElementsByTagName("head")[0],s=r.createElement("script");s.setAttribute("type","text/javascript");s.setAttribute("src",l);n.neuroleadId=d;h.appendChild(s);}catch(e){}})(window,document,"https://cdn.leadster.com.br/neurolead/neurolead.min.js", 51467);</script> 
+<script type="text/javascript">(function(n,r,l,d){try{var h=r.head||r.getElementsByTagName("head")[0],s=r.createElement("script");s.setAttribute("type","text/javascript");s.setAttribute("src",l);n.neuroleadId=d;h.appendChild(s);}catch(e){}})(window,document,"https://cdn.leadster.com.br/neurolead/neurolead.min.js", 51467);
+</script>   
 <body>
     <header>
         <img src="imagens/logo_1_1x.jpg" alt="">
@@ -54,13 +55,13 @@
     <div class="plantas_apt">
         <h2 class="subtitulos" id="plantas">Plantas</h2>
             <div class="coluna">
-                <img class="img_planta" src="imagens/planta01.jpeg.jpeg" alt="">
+                <a href="imagens/planta01.jpeg.jpeg"><img class="img_planta" src="imagens/planta01.jpeg.jpeg"</a>
             </div>
             <div class="coluna">
-                <img class="img_planta" src="imagens/planta02.jpeg.jpeg" alt="">
+                <a href="imagens/planta02.jpeg.jpeg"><img class="img_planta" src="imagens/planta02.jpeg.jpeg"</a>
             </div>
             <div class="coluna">
-                <img class="img_planta" src="imagens/planta03.jprg.jpeg" alt="">
+                <a href="imagens/planta03.jprg.jpeg"><img class="img_planta" src="imagens/planta03.jprg.jpeg"</a>
             </div>
     </div>
         <h2 class="subtitulos" id="localizacao">Localização</h2>
