--- a/index.html
+++ b/index.html
@@ -47,11 +47,35 @@
     </div>
     <h2 class="subtitulos" id="imagens">Imagens</h2>
         <p>Áreas de Lazer entregue equipadas</p>
-        <picture>
-            <img src="" alt="">
-        </picture>
-        <picture>
-        </picture>
+    <div>
+        <div>
+            <img class="img_lazer1" src="imagens/lazer01.jpeg.jpeg" alt="">
+        </div>
+        <div>
+            <img class="img_lazer1" src="imagens/lazer02.jpeg.jpeg" alt="">
+        </div>
+        <div>
+            <img class="img_lazer1" src="" alt="">
+        </div>
+    </div>
+    <div>
+        <div>
+            <img class="img_lazer2" src="" alt="">
+        </div>
+        <div>
+            <img class="img_lazer2" src="" alt="">
+        </div>
+        <div>
+            <img class="img_lazer2" src="" alt="">
+        </div>
+    </div>
+    <div id="teste">
+        <p>menuu</p>
+    <ul>
+        <li>oi</li>
+        <li>tudo bem</li>
+    </ul>
+    </div>
     <div class="plantas_apt">
         <h2 class="subtitulos" id="plantas">Plantas</h2>
             <div class="coluna">
